# Urbanex

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEPLOYMENT_OPTIMIZATIONS.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  OPENENV_VALIDATION_REPORT.md  README.md  __init__.py  client.py  conftest.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-locked.txt  requirements.txt  run.py  test_validator.py  test_ws.py  test_ws_integrated.py  urbanex_deep_dive.md  validate_submission.py
api/: server.py
baseline/: __init__.py  baseline_agent.py  visualizer.py
environment/: __init__.py  city.py  incidents.py  rewards.py  routes.py  urbanex_env.py  velora_env.py
graders/: __init__.py  grader_easy.py  grader_hard.py  grader_medium.py
models/: __init__.py  action.py  observation.py  reward.py
server/: __init__.py  app.py  urbanex_environment.py
tasks/: __init__.py  task_easy.py  task_hard.py  task_medium.py
tests/: test_env.py  test_graders.py
