[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "urbanex"
version = "1.0.0"
description = "URBANEX — Urban Exploration RL environment for Bangalore city navigation"
requires-python = ">=3.11"
dependencies = [
    "fastapi-slim==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["models*", "environment*", "tasks*", "graders*", "api*", "baseline*"]

[tool.pytest.ini_options]
# Ensures pytest always adds project root to sys.path
pythonpath = ["."]
testpaths = ["tests"]
